[metadata]
name = babysteps
author = Jim Rollenhagen
author-email = jim@jimrollenhagen.com
summary = Financial Baby Steps Helper
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
[files]
packages =
    babysteps

[entry_points]
console_scripts =
    babysteps = babysteps.cmd.app:run
